refactor auth package