@@ -6,22 +6,26 @@ import java.io.*;
 import java.net.Socket;
 import java.net.URL;
 import java.net.URLDecoder;
+import java.nio.charset.StandardCharsets;
 import java.util.HashMap;
 import java.util.Map;
 import java.util.StringTokenizer;
+import java.util.logging.Level;
+import java.util.logging.Logger;
 
-import me.gosdev.chatpointsttv.Utils.Scopes;
+import static org.bukkit.Bukkit.getLogger;
 
 public class AuthenticationCallbackRequest implements Runnable {
 
-    private static final String EOL = "\r\n"; // as specified by HTTP/1.1 spec
+    private static final String EOL = "\r\n";
+    private static final Logger LOG = getLogger();
 
-    private Socket socket;
-    private URL authPage;
-    private URL failurePage;
-    private URL successPage;
+    private final Socket socket;
+    private final URL authPage;
+    private final URL failurePage;
+    private final URL successPage;
 
-    private AuthenticationListener authenticationListener; // Will receive auth callbacks
+    private AuthenticationListener authenticationListener;
 
     /**
      * Construct the request and specify which HTML files to server.
@@ -46,10 +50,8 @@ public class AuthenticationCallbackRequest implements Runnable {
      * @throws IOException if an I/O exception occurs.
      */
     private static void sendFileBytes(InputStream fis, OutputStream os) throws IOException {
-        // Construct a 1K buffer to hold bytes on their way to the socket.
         byte[] buffer = new byte[1024];
-        int bytes = 0;
-        // Copy requested file into the socket's output stream.
+        int bytes;
         while ((bytes = fis.read(buffer)) != -1) {
             os.write(buffer, 0, bytes);
         }
@@ -62,26 +64,23 @@ public class AuthenticationCallbackRequest implements Runnable {
      * @return Map of all GET parameter key value pairs
      */
     private static Map<String, String> extractQueryParams(String request) {
-        Map<String, String> params = new HashMap<String, String>();
+        Map<String, String> params = new HashMap<>();
 
         String[] parts = request.split("\\?", 2);
         if (parts.length < 2) {
-            return params; // No params
+            return params;
         }
 
         String query = parts[1];
         for (String param : query.split("&")) {
             String[] pair = param.split("=");
 
-            try {
-                String key = URLDecoder.decode(pair[0], "UTF-8");
-                String value = "";
-                if (pair.length > 1) {
-                    value = URLDecoder.decode(pair[1], "UTF-8");
-                }
-                params.put(key, value);
-            } catch (UnsupportedEncodingException ignored) {
+            String key = URLDecoder.decode(pair[0], StandardCharsets.UTF_8);
+            String value = "";
+            if (pair.length > 1) {
+                value = URLDecoder.decode(pair[1], StandardCharsets.UTF_8);
             }
+            params.put(key, value);
         }
 
         return params;
@@ -95,124 +94,75 @@ public class AuthenticationCallbackRequest implements Runnable {
     public void run() {
         try {
             processRequest();
-        } catch (Exception ignored) {
+        } catch (Exception exception) {
+            LOG.log(Level.WARNING, "error while processing request", exception);
         }
     }
 
     /**
      * Process the HTTP request and send out correct page.
-     *
-     * @throws IOException
      */
-    @SuppressWarnings("null")
     private void processRequest() throws IOException {
-        // Get a reference to the socket's input and output streams.
-        @SuppressWarnings("unused")
-        InputStream is = socket.getInputStream();
-        DataOutputStream os = new DataOutputStream(socket.getOutputStream());
 
-        // Set up input stream filters.
-        BufferedReader br = new BufferedReader(new InputStreamReader(socket.getInputStream()));
 
-        // Get the request line of the HTTP request message.
-        String requestLine = br.readLine();
+        try (
+                DataOutputStream os = new DataOutputStream(socket.getOutputStream());
+                BufferedReader br = new BufferedReader(new InputStreamReader(socket.getInputStream()))) {
 
-        // Store the request line for debugging.
-        //String rawRequest = "\n" + requestLine;
 
-        // Read the header lines.
-        @SuppressWarnings("unused")
-        String headerLine = null;
-        while ((headerLine = br.readLine()).length() != 0) {
-            //rawRequest += headerLine + "\n";
+            String requestLine = br.readLine();
+
+            Map<String, String> queryParams = getParams(requestLine);
+
+            String scope = queryParams.get("scope").split(" ")[0];
+
+            String accessToken = queryParams.get("access_token");
+            String error = queryParams.get("error");
+            String errorDescription = queryParams.get("error_description");
+
+            write(accessToken, error, os);
+
+            socket.close();
+
+
+            if (authenticationListener != null) {
+                if (accessToken != null) {
+                    Scopes accessScopes = Scopes.fromString(scope);
+                    authenticationListener.onAccessTokenReceived(accessToken, accessScopes);
+                }
+                if (error != null) {
+                    authenticationListener.onAuthenticationError(error, errorDescription);
+                }
+            }
         }
 
-        // DEBUG: Print request
-        //System.out.println(rawRequest);
+    }
 
-        // Parse the request line.
-        StringTokenizer tokens = new StringTokenizer(requestLine);
-        @SuppressWarnings("unused")
-        String requestMethod = tokens.nextToken();  // Request method, which should be "GET"
-        String requestFilename = tokens.nextToken();
-        Map<String, String> queryParams = extractQueryParams(requestFilename);
+    private void write(String accessToken, String error, DataOutputStream os) throws IOException {
+        InputStream inputStream = getInputStream(accessToken, error);
 
-        // If we have the token, send the success page
-        String accessToken = queryParams.get("access_token");
-        String[] scopes = new String[0];
-        if (queryParams.containsKey("scope")) {
-            scopes = queryParams.get("scope").split(" ");
-        }
+        os.writeBytes("HTTP/1.1 200 OK" + EOL);
 
-        // See if there is an error message, send the failure page
-        String error = queryParams.get("error");
-        String errorDescription = queryParams.get("error_description");
+        os.writeBytes("Content-type: text/html" + EOL);
 
-        //System.out.println("file: " + requestFilename);
-
-        // Open the requested file.
-        InputStream fis;
-        String contentTypeLine;
-
-        if (accessToken != null) {
-            fis = successPage.openStream();
-        } else if (error != null) {
-            fis = failurePage.openStream();
-        } else {
-            fis = authPage.openStream();
-        }
-        contentTypeLine = "Content-type: text/html" + EOL;
-
-
-        boolean fileExists = fis != null;
-
-        // Construct the response message.
-        String statusLine = null;
-        String entityBody = null;
-        if (fileExists) {
-            statusLine = "HTTP/1.1 200 OK" + EOL;
-        } else {
-            statusLine = "HTTP/1.1 404 Not Found" + EOL;
-            entityBody = "404 Not Found";
-        }
-
-        // Send the status line.
-        os.writeBytes(statusLine);
-
-        // Send the content type line.
-        os.writeBytes(contentTypeLine);
-
-        // Send a blank line to indicate the end of the header lines.
         os.writeBytes(EOL);
 
-        // Send the entity body.
-        if (fileExists) {
-            sendFileBytes(fis, os);
-            fis.close();
-        } else {
-            os.writeBytes(entityBody);
-        }
+        sendFileBytes(inputStream, os);
+        inputStream.close();
+    }
 
-        // Close streams and socket.
-        os.close();
-        br.close();
-        socket.close();
-        
-
-        // Send callbacks
-        if (authenticationListener != null) {
-            // Send callback if access token received
-            if (accessToken != null) {
-                Scopes[] accessScopes = new Scopes[scopes.length];
-                for (int i = 0; i < scopes.length; i++) {
-                    accessScopes[i] = Scopes.fromString(scopes[i]);
-                }
-                authenticationListener.onAccessTokenReceived(accessToken, accessScopes);
-            }
-            // Send callback if authorization error
-            if (error != null) {
-                authenticationListener.onAuthenticationError(error, errorDescription);
-            }
+    private InputStream getInputStream(String accessToken, String error) throws IOException {
+        if (accessToken != null) {
+            return successPage.openStream();
+        } else if (error != null) {
+            return failurePage.openStream();
         }
+        return authPage.openStream();
+    }
+
+    private Map<String, String> getParams(String requestLine) {
+        StringTokenizer tokens = new StringTokenizer(requestLine);
+        String requestFilename = tokens.nextToken();
+        return extractQueryParams(requestFilename);
     }
 }
